--- a/lista2/1_chatbot/domain.yml
+++ b/lista2/1_chatbot/domain.yml
@@ -6,7 +6,8 @@ intents:
   - affirm
   - deny
   - inform
-  - request_clothes
+  - request_shirt
+  - request_pants
   - out_of_scope
 
 entities:
@@ -81,8 +82,3 @@ responses:
 
 actions:
   - action_process_order
-  - action_default_fallback
-
-session_config:
-  session_expiration_time: 60
-  carry_over_slots_to_new_session: true
