--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ dependencies = [
     "matplotlib>=3.10.1",
     "numpy>=2.2.3",
     "pandas>=2.2.3",
+    "pip>=25.1.1",
     "scikit-learn>=1.6.1",
+    "spacy>=3.8.7",
     "uvicorn>=0.34.2",
 ]
